--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-python-dotenv
-azure-core
-azure-ai-documentintelligence
-tenacity
-azure-search-documents
-azure-search
-ipython
-openai
-azure-storage-blob
-langchain
-tiktoken
 streamlit
-ipykernel
-azure-ai-evaluation
-aiohttp
-ipywidgets
+streamlit-chat
+pandas
+python-dotenv
+openai
+azure-ai-ml
+azure-core
+azure-identity
+semantic-kernel
+azure-storage-blob
+ipython
+jupyter
